
20070202: Applied patch #1650119 - restore nav panel properly - thanks to loh_tar for the patch.

20070202: Applied patch #1649368 - added identifier info to buy/sellarrow chart objects - thanks to xley for the patch.

20070203: Upgraded ta-lib to version 0.3. ta-lib is using configure and has changed to a shared library, so we have to remove
          ta-lib from the qtstalker source and compile and install it as a separate package. This will be better for 
          the distribution maintainers as well.

20070203: Changed all the installation paths from /usr/* to /usr/local/* as it should be. And the distribution maintainers rejoiced...

20070203: Applied patch #1650853 - navi buttons +new class - thanks to loh_tar for the patch

20070204: Fixed bug #1637749 - chart objects are lost when placed on diff. indi. screens.

20070211: Applied patch #1653959 - HelpWindow displays CHANGELOG - thanks to loh_tar for the patch.
          Added CHANGELOG files to the docs.pro install procedure so loh_tar's patch would have
          something to display.

20070211: Applied patch #1653187 - single click action - thanks to loh_tar for the patch.

20070211: Applied patch #1652823 - in dev.html fix old data location path and typos - thanks to xley for the patch.

20070211: Applied patch #1652684 - usage of new ToolBarBtn - thanks to loh_tar for the patch.

20070211: Applied patch #1651805 - RcFile +Preferences.diff - thanks to loh_tar for the patch

20070214: Applied patch #1659728 - progressBar for CSV quote dialog - thanks to xley for the patch.

20070214: Applied patch #1659771 - Toolbar.cpp, add new buttons +possibl to place vertical - thanks to loh_tar for the patch.

20070215: Applied patch #1659638 - Qtstalker.cpp use modified RcFile.cpp - thanks to loh_tar for the patch.            

20070215: Applied patch #1659999 - MainMenubar use RcFile - thanks to loh_tar for the patch.

20070215: Applied patch #1660435 - ChartToolbar use RcFile - thanks to loh_tar for the patch.
